# core-base

./: .gitignore  CHANGELOG.md  README.md  package.json
.github/workflows/: build-artifacts.yml  build.yml  release.yml
.windsurf/: README.md  global_rules.md
.windsurf/rules/: bridge.md  core.md  webui.md
apps/: README.md
bridge/: README.md
cloud/: README.md
core/: Cargo.toml  core.db
core/src/: main.rs
docker/: README.md
docs/: README.md
scripts/: README.md
webui/: package-lock.json  package.json  vite.config.ts
webui/src/: App.tsx
workflows/: README.md  commit-and-push.md  init-core.md
